--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ path="./src/lib.rs"
 anyhow = "1.0.94"
 axum = "0.7.9"
 jsonwebtoken = "9.3.0"
-serde = "1.0.215"
+serde = { version = "1.0.215", features = ["derive"] }
 tokio = { version = "1.42.0", features = ["full"] }
 uuid = "1.11.0"
+sea-orm = { version = "1.1.0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
+serde_json = "1.0.133"
+serde_yml = "0.0.12"
